New database model and getters and setters

--- a/CompanyManagement/pom.xml
+++ b/CompanyManagement/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>demo</artifactId>
+	<artifactId>CompanyManagement</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>demo</name>
+	<name>CompanyManagement</name>
 	<description>Company management</description>
 	<properties>
 		<java.version>11</java.version>
