--- a/CompanyManagement/src/main/resources/application.properties
+++ b/CompanyManagement/src/main/resources/application.properties
@@ -1,18 +1,17 @@
-## Spring DATASOURCE
-spring.datasource.url=jdbc:mysql://localhost:3306/companymanagementdb?serverTimezone=CET
+## SPRING DATASOURCE
+spring.datasource.url=jdbc:mysql://localhost:3306/companymanagementdb?
 spring.datasource.username=root
 spring.datasource.password=Pablo123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql: true
 spring.profiles.active=local
-spring.data.redis.repositories.type = none
 
-## Hibernate Properties
+## HIBERNATE
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
 
-spring.flyway.locations=classpath:/db/migration
+## FLYWAY
+spring.flyway.locations=classpath:db/migration
 spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
-spring.flyway.clean-on-validation-error: false
