--- a/CompanyManagement/src/main/resources/application.properties
+++ b/CompanyManagement/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 ## SPRING DATASOURCE
-spring.datasource.url=jdbc:mysql://localhost:3306/companymanagementdb?
+spring.datasource.url=jdbc:mysql://localhost:3306/companymanagementdb
 spring.datasource.username=root
-spring.datasource.password=Pablo123
+spring.datasource.password=J0s!pa530
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.show-sql: true
+spring.jpa.show-sql= true
 spring.profiles.active=local
 
 ## HIBERNATE
