--- a/CompanyManagement/src/main/resources/application.properties
+++ b/CompanyManagement/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ## SPRING DATASOURCE
-spring.datasource.url=jdbc:mysql://localhost:3306/companymanagementdb?
+spring.datasource.url=jdbc:mysql://localhost:3306/companymanagementdb?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=Pablo123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -9,9 +9,10 @@ spring.profiles.active=local
 
 ## HIBERNATE
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
+
+hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 ## FLYWAY
 spring.flyway.locations=classpath:db/migration
 spring.flyway.enabled=true
-spring.flyway.baseline-on-migrate=true
+
