--- a/CompanyManagement/src/main/resources/application.properties
+++ b/CompanyManagement/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## SPRING DATASOURCE
-spring.datasource.url=jdbc:mysql://localhost:3306/companymanagementdb?useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://localhost:3306/companymanagementdb
 spring.datasource.username=root
-spring.datasource.password=Pablo123
+spring.datasource.password=Marinviskovic14!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql: true
