--- a/CompanyManagement/src/main/resources/application.properties
+++ b/CompanyManagement/src/main/resources/application.properties
@@ -1,18 +1,24 @@
 ## SPRING DATASOURCE
 spring.datasource.url=jdbc:mysql://localhost:3306/companymanagementdb
 spring.datasource.username=root
-spring.datasource.password=Marinviskovic14!
+spring.datasource.password=J0s!pa530
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.show-sql: true
+spring.jpa.show-sql= true
 spring.profiles.active=local
+spring.jpa.open-in-view=true
 
 ## HIBERNATE
 spring.jpa.hibernate.ddl-auto=update
-
-hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
 
 ## FLYWAY
 spring.flyway.locations=classpath:db/migration
 spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
 
+##THYMELEAF
+spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=true 
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
