--- a/CompanyManagement/src/main/resources/application.properties
+++ b/CompanyManagement/src/main/resources/application.properties
@@ -1,18 +1,18 @@
 ## SPRING DATASOURCE
 spring.datasource.url=jdbc:mysql://localhost:3306/companymanagementdb
 spring.datasource.username=root
-spring.datasource.password=Marinviskovic14!
+spring.datasource.password=Pablo123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql: true
+spring.jpa.properties.hibernate.format_sql= true
 spring.profiles.active=local
+spring.devtools.restart.enabled = false
 
 ## HIBERNATE
 spring.jpa.hibernate.ddl-auto=update
-
 hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 ## FLYWAY
 spring.flyway.locations=classpath:db/migration
 spring.flyway.enabled=true
-
