--- a/CompanyManagement/src/main/resources/application.properties
+++ b/CompanyManagement/src/main/resources/application.properties
@@ -5,9 +5,9 @@ spring.datasource.password=Pablo123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql: true
-spring.jpa.properties.hibernate.format_sql= true
+spring.jpa.properties.hibernate.format_sql=true
 spring.profiles.active=local
-spring.devtools.restart.enabled = false
+spring.devtools.restart.enabled =false
 
 ## HIBERNATE
 spring.jpa.hibernate.ddl-auto=update
@@ -16,3 +16,11 @@ hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 ## FLYWAY
 spring.flyway.locations=classpath:db/migration
 spring.flyway.enabled=true
+
+##THYMELEAF
+spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=true 
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
